[Feature] Dependency Injection

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -34,7 +34,7 @@
     "- OCP: Open Close Principle\n",
     "- LSP: Liskov Substitution Principle\n",
     "- ISP: Interface Segregation Principle\n",
-    "- DIP:"
+    "- DIP: Dependency Inversion principle"
    ]
   },
   {
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d540ffc",
+   "id": "5b1ed087",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1260,12 +1260,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2071a237",
+   "id": "2eabe774",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProductCatalog:\n",
-    "    def show_all_products(self):\n",
+    "    def show_all_products(self) -> None:\n",
     "        product_repo = SQLProductRepository()\n",
     "        product_list = product_repo.get_all_product_names()\n",
     "        print(f\"List of all products: {product_list}\")\n",
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1645b484",
+   "id": "da8d459b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2293ec7",
+   "id": "444feb23",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1302,8 +1302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "939b1c2e",
+   "execution_count": null,
+   "id": "af075ea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1321,13 +1321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "071313cc",
+   "execution_count": null,
+   "id": "b392e51f",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ProductCatalog:\n",
-    "    def show_all_products(self):\n",
+    "    def show_all_products(self) -> None:\n",
     "        product_repo = ProductFactory.create()\n",
     "        product_list = product_repo.get_all_product_names()\n",
     "        print(f\"List of all products: {product_list}\")"
@@ -1335,8 +1335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3248a42a",
+   "execution_count": null,
+   "id": "5fd709ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,34 +1347,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5020a027",
+   "execution_count": null,
+   "id": "46ce0daf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "List of all products: ['soap', 'tooth-paste']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "catalog = ProductCatalog()\n",
     "catalog.show_all_products()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3890ac7e",
+   "cell_type": "markdown",
+   "id": "4bc5ec70",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
+   "source": [
+    "## Bonus: Dependency Injection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04693558",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class ProductRepository(ABC):\n",
+    "    @abstractmethod\n",
+    "    def get_all_product_names(self) -> list[str]:\n",
+    "        pass\n",
+    "    \n",
+    "class ProductFactory:\n",
+    "    def create() -> ProductRepository:\n",
+    "        return SQLProductRepository()\n",
+    "    \n",
+    "class SQLProductRepository(ProductRepository):\n",
+    "    def get_all_product_names(self) -> list[str]:\n",
+    "        return [\"soap\", \"tooth-paste\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfe80e27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ProductCatalog:\n",
+    "    def __init__(self, product_repository: ProductRepository):\n",
+    "        self.__product_repository = product_repository\n",
+    "    \n",
+    "    def show_all_products(self) -> None:\n",
+    "        product_list = self.__product_repository.get_all_product_names()\n",
+    "        print(f\"List of all products: {product_list}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84356f2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_repo = ProductFactory.create()\n",
+    "catalog = ProductCatalog(product_repo)\n",
+    "catalog.show_all_products()"
+   ]
   }
  ],
  "metadata": {
