[Fix] Typo SRE -> SRP

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -46,7 +46,7 @@
     }
    },
    "source": [
-    "## SRE: Single Responsibility Principle\n",
+    "## SRP: Single Responsibility Principle\n",
     "\n",
     "\"Every software compponent should have one and only one responsibility\"\n",
     "\n",
@@ -289,7 +289,7 @@
     "    def __init__(self):\n",
     "        self.__db_connection = None\n",
     "    \n",
-    "    def save(self, student:Student):\n",
+    "    def save(self, student:Student) -> None:\n",
     "        self.__create_db_connection()\n",
     "        self.__insert_student_data(student)\n",
     "        self.__close_db_connection\n",
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b1ed087",
+   "id": "c4d9f90d",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1260,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eabe774",
+   "id": "13d834b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da8d459b",
+   "id": "e8c15080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444feb23",
+   "id": "3349987c",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1303,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af075ea6",
+   "id": "5db86edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b392e51f",
+   "id": "ffe4788d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fd709ec",
+   "id": "eb98f8f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ce0daf",
+   "id": "0e000d1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bc5ec70",
+   "id": "5514728d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04693558",
+   "id": "cf11b565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe80e27",
+   "id": "749fae32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,7 +1410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84356f2a",
+   "id": "a8cfaee8",
    "metadata": {},
    "outputs": [],
    "source": [
