[Feature] Include references

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -34,7 +34,10 @@
     "- OCP: Open Close Principle\n",
     "- LSP: Liskov Substitution Principle\n",
     "- ISP: Interface Segregation Principle\n",
-    "- DIP: Dependency Inversion principle"
+    "- DIP: Dependency Inversion principle\n",
+    "\n",
+    "## Feel free clone this repo and follow along\n",
+    "Github repository: https://github.com/boedybios/SOLID-Workshop"
    ]
   },
   {
@@ -1417,6 +1420,25 @@
     "product_repo = ProductFactory.create()\n",
     "catalog = ProductCatalog(product_repo)\n",
     "catalog.show_all_products()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88e83d18",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## References\n",
+    "\n",
+    "### Books:\n",
+    "- [Clean Code : A Handbook of Agile Software Craftsmanship by Robert C. Martin](https://learning.oreilly.com/library/view/clean-code-a/9780136083238/)\n",
+    "- [Clean Architecture: A Craftsman's Guide to Software Structure and Design by Robert C. Martin](https://learning.oreilly.com/library/view/clean-architecture-a/9780134494272/)\n",
+    "\n",
+    "## Courses:\n",
+    "- [Clean Code Fundamentals by Robert C. Martin](https://learning.oreilly.com/videos/clean-code-fundamentals/9780134661742/)"
    ]
   }
  ],
