[Feature] Include exercises

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88e83d18",
+   "id": "ecb4ded7",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1437,9 +1437,136 @@
     "- [Clean Code : A Handbook of Agile Software Craftsmanship by Robert C. Martin](https://learning.oreilly.com/library/view/clean-code-a/9780136083238/)\n",
     "- [Clean Architecture: A Craftsman's Guide to Software Structure and Design by Robert C. Martin](https://learning.oreilly.com/library/view/clean-architecture-a/9780134494272/)\n",
     "\n",
-    "## Courses:\n",
+    "### Courses:\n",
     "- [Clean Code Fundamentals by Robert C. Martin](https://learning.oreilly.com/videos/clean-code-fundamentals/9780134661742/)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e88d4b07",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Exercise\n",
+    "Let's practice by refactoring this simple codebase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29020260",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Order:\n",
+    "    items = []\n",
+    "    quantities = []\n",
+    "    prices = []\n",
+    "    status = \"open\"\n",
+    "\n",
+    "    def add_item(self, name, quantity, price):\n",
+    "        self.items.append(name)\n",
+    "        self.quantities.append(quantity)\n",
+    "        self.prices.append(price)\n",
+    "\n",
+    "    def total_price(self):\n",
+    "        total = 0\n",
+    "        for i in range(len(self.prices)):\n",
+    "            total += self.quantities[i] * self.prices[i]\n",
+    "        return total\n",
+    "\n",
+    "    def pay(self, payment_type, security_code):\n",
+    "        if payment_type == \"debit\":\n",
+    "            print(\"Processing debit payment type\")\n",
+    "            print(f\"Verifying security code: {security_code}\")\n",
+    "            self.status = \"paid\"\n",
+    "        elif payment_type == \"credit\":\n",
+    "            print(\"Processing credit payment type\")\n",
+    "            print(f\"Verifying security code: {security_code}\")\n",
+    "            self.status = \"paid\"\n",
+    "        else:\n",
+    "            raise Exception(f\"Unknown payment type: {payment_type}\")\n",
+    "\n",
+    "def main():\n",
+    "    order = Order()\n",
+    "    order.add_item(\"Keyboard\", 1, 50)\n",
+    "    order.add_item('SSD', 1, 150)\n",
+    "    order.add_item(\"USB cable\", 2, 5)\n",
+    "    print(order.total_price())\n",
+    "    order.pay('debit', '0372846')\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1826c22a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Step 1: SRP\n",
+    "\n",
+    "Can you spot any possibility to separate responsibilities in the code? Let's apply SRP."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf26ca48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09384abb",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Step 2: OCP\n",
+    "\n",
+    "What if we have a new payment method (e.g., GoPay)? Let's apply OCP. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fc6f803",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d61f656d",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Step 3: LSP\n",
+    "\n",
+    "What if we have PayPal as a new payment method which utilize email instead of security code for verification? Let's apply LSP. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09430300",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
