[Fix] Fix typos

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -34,7 +34,7 @@
     "- OCP: Open Close Principle\n",
     "- LSP: Liskov Substitution Principle\n",
     "- ISP: Interface Segregation Principle\n",
-    "- DIP: Dependency Inversion principle\n",
+    "- DIP: Dependency Inversion Principle\n",
     "\n",
     "## Feel free clone this repo and follow along\n",
     "Github repository: https://github.com/boedybios/SOLID-Workshop"
@@ -385,7 +385,7 @@
    "source": [
     "class InsurancePremiumDiscountCalculator:\n",
     "    def calculate_discount(self, customer:HealthInsuranceCustomerProfile) -> int:\n",
-    "        if customer.is_loyal:\n",
+    "        if customer.is_loyal():\n",
     "            return 20\n",
     "        return 0"
    ]
@@ -452,12 +452,12 @@
    "source": [
     "class InsurancePremiumDiscountCalculator:\n",
     "    def calculate_health_insurance_discount(self, customer:HealthInsuranceCustomerProfile) -> int:\n",
-    "        if customer.is_loyal:\n",
+    "        if customer.is_loyal():\n",
     "            return 20\n",
     "        return 0\n",
     "    \n",
     "    def calculate_vehicle_insurance_discount(self, customer:VehicleInsuranceCustomerProfile) -> int:\n",
-    "        if customer.is_loyal:\n",
+    "        if customer.is_loyal():\n",
     "            return 20\n",
     "        return 0"
    ]
@@ -675,7 +675,7 @@
    "source": [
     "## LSP: Liskov Substitution Principle\n",
     "\n",
-    "\"Objects should be replaceable with their subtypes without affecting the correctness of ther program\"\n",
+    "\"Objects should be replaceable with their subtypes without affecting the correctness of the program\"\n",
     "\n",
     "Key points:\n",
     "- Change the \"Is-A\" way of thinking\n",
@@ -691,7 +691,7 @@
     }
    },
    "source": [
-    "### Example: Don't foce a pinguin to fly"
+    "### Example: Don't force a pinguin to fly"
    ]
   },
   {
@@ -1202,7 +1202,7 @@
    "source": [
     "class CanonBasicPrinter(Printer):\n",
     "    def do_print(self) -> None:\n",
-    "        print(\"HP printing\")"
+    "        print(\"Canon printing\")"
    ]
   },
   {
@@ -1244,7 +1244,7 @@
    "source": [
     "## DIP: Dependency Inversion Principle\n",
     "\n",
-    "- \"High-level modules should not depend on lolw-level modules. Both should depend on abstractions\"\n",
+    "- \"High-level modules should not depend on low-level modules. Both should depend on abstractions\"\n",
     "- \"Abstractions should not depend on details. Details should depend on abstractions\""
    ]
   },
