[Fix] Fix typo SRE->SRP

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -30,7 +30,7 @@
    },
    "source": [
     "# SOLID Workshop\n",
-    "- SRE: Single Responsibility Principle\n",
+    "- SRP: Single Responsibility Principle\n",
     "- OCP: Open Close Principle\n",
     "- LSP: Liskov Substitution Principle\n",
     "- ISP: Interface Segregation Principle\n",
