[Fix] Fix feel free to clone

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -36,7 +36,7 @@
     "- ISP: Interface Segregation Principle\n",
     "- DIP: Dependency Inversion Principle\n",
     "\n",
-    "## Feel free clone this repo and follow along\n",
+    "## Feel free to clone this repo and follow along\n",
     "Github repository: https://github.com/boedybios/SOLID-Workshop"
    ]
   },
