[Fix] Fix typos

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -740,7 +740,7 @@
     "    pass \n",
     "\n",
     "#     def fly(self) -> None:\n",
-    "#         raise TypeError(\"Piguin cannot fly\")"
+    "#         raise TypeError(\"Pinguin cannot fly\")"
    ]
   },
   {
@@ -1291,6 +1291,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3349987c",
    "metadata": {
@@ -1300,7 +1301,7 @@
    },
    "source": [
     "### Let's refactor the code\n",
-    "\"High-level modules should not depend on lolw-level modules. Both should depend on abstractions\""
+    "\"High-level modules should not depend on low-level modules. Both should depend on abstractions\""
    ]
   },
   {
